# BF_IDE_V2

./: .gitignore  .gitmodules  BF_IDE_V2.sln  BF_IDE_V2.sln - Shortcut.lnk  README.md  badapple.7z
App/: App.vcxproj  App.vcxproj.filters  Main.cpp  MainApp.cpp  MyImGuiWidgets.cpp  README.md  history.bfidedata  imgui.ini  pch.h
App/Src/: App.cpp  App.h  Editor.cpp  Editor.h  Emulator.cpp  Emulator.h  History.cpp  History.h  MyImGuiWidgets.cpp  MyImGuiWidgets.h  Shortcuts.h  Utility.cpp  Utility.h  _Editor.cpp  _Editor.h  d3d12_stuff.h
App/Src/Events/: Event.h  EventBus.h  Observable.h
App/Src/Models/: EditModel.cpp  EditModel.h  EditorModel.cpp  EditorModel.h  FileModel.cpp  FileModel.h  Model.h
App/Src/States/: EditState.cpp  EditState.h  FileState.cpp  FileState.h  OpenProjectState.cpp  OpenProjectState.h  SelectProjectState.cpp  SelectProjectState.h  State.h  WorkingState.cpp  WorkingState.h
App/Src/ViewModels/: EditViewModel.cpp  EditViewModel.h  EditorViewModel.cpp  EditorViewModel.h  FileViewModel.cpp  FileViewModel.h
App/Src/Views/: EditView.cpp  EditView.h  EditorView.cpp  EditorView.h  FileView.cpp  FileView.h
App/Src/Views/Tools/: CompilationOutputTool.cpp  CompilationOutputTool.h  EmulationIOTool.cpp  EmulationIOTool.h  EmulationImageTool.cpp  EmulationImageTool.h  MemoryTool.cpp  MemoryTool.h  Tool.h  TreeTool.cpp  TreeTool.h
Compiler/: Assemble.bat  CMakeLists.txt  CMakePresets.json  CheckRequirements.bat  Compiler.vcxproj  Compiler.vcxproj.filters  LinkObj.bat  MainComp.cpp  README.md
Compiler/Res/: Code.bf  help.txt
Compiler/Res/Code/: Code.asm  Code.bf  Code2.bf
Compiler/Scripts/: Assemble.sh  CheckRequirements.sh  LinkObj.sh
Compiler/Src/: AST.cpp  AST.h  CompilationParams.cpp  CompilationParams.h  Compiler.cpp  Compiler.h  CompilerError.cpp  CompilerError.h  CompilerUtility.h  Emulator.cpp  Emulator.h  IR.cpp  IR.h  Program.cpp  Program.h  ScriptsManager.cpp  ScriptsManager.h  Token.cpp  Token.h  Utility.cpp  Utility.h
CompilerTests/: CompilerTests.cpp  CompilerTests.vcxproj  CompilerTests.vcxproj.filters  pch.h
CompilerTests/Res/: Code_Invalid_Parse_4.bf  Code_Invalid_Parse_5.bf  Code_Invalid_Token_3.bf  Code_Valid_1.bf
Tests/: CompilerTests.cpp  Tests.filters  Tests.vcxproj  UtilityTests.cpp
Tests/Res/: Code_Valid_1.bf  Code_Valid_Link_2.bf
